# codeclimate-issues-to-csv

./: README.md  pyproject.toml
app/: codeclimate-issues.py
