[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Victor Hugo Viana <torugosis@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.21.1"
python-dotenv = "^0.19.2"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
